Added a11yTO sponsor to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -643,6 +643,13 @@
               </a>
               <p>Roselli LLC.</p>
             </li>
+
+            <li>
+              <a href="http://http://www.accessibilitycampto.org/">
+                <img src="/images/sponsors/a11yto_logo.png" alt="Accessibility Camp Toronto">
+              </a>
+              <p>#a11yTO Conference</p>
+            </li>
           </ul>
           <hr>
           <p>Want to sponsor? <a href="mailto:job@roledrinks.com">We'd love to hear it!</a></p>
