--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -635,7 +635,7 @@
       <section id="thank-you">
         <div class="✨">
           <h2>Who's paying for all this?</h2>
-          <p>These companies are awesome enough to sponsor this event:</p>
+          <p>These organisations are awesome enough to sponsor this event:</p>
           <ul class="💰">
             <li>
               <a href="http://adrianroselli.com">
