--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -641,7 +641,7 @@
               <a href="http://adrianroselli.com">
                 <img src="/images/sponsors/roselli.png" alt="Roselli LLC">
               </a>
-              <p>Roselli LLC.</p>
+              <p>Adrian Roselli LLC.</p>
             </li>
 
             <li>
