--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -639,7 +639,7 @@
           <ul class="💰">
             <li>
               <a href="http://adrianroselli.com">
-                <img src="/images/sponsors/roselli.png" alt="Roselli LLC">
+                <img src="/images/sponsors/roselli.png" alt="Adrian Roselli LLC">
               </a>
               <p>Adrian Roselli LLC.</p>
             </li>
