Added TPG sponsor to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -645,11 +645,19 @@
             </li>
 
             <li>
-              <a href="http://http://www.accessibilitycampto.org/">
+              <a href="http://www.accessibilitycampto.org/">
                 <img src="/images/sponsors/a11yto_logo.png" alt="Accessibility Camp Toronto">
               </a>
               <p>#a11yTO Conference</p>
             </li>
+
+            <li>
+              <a class="tpg" href="http://www.paciellogroup.com/">
+                <img src="/images/sponsors/tpg.png" alt="The Paciello Group">
+              </a>
+              <p>The Paciello Group</p>
+            </li>
+
           </ul>
           <hr>
           <p>Want to sponsor? <a href="mailto:job@roledrinks.com">We'd love to hear it!</a></p>
