Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -601,6 +601,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/ConnollyKrystal">
+                <img src="https://pbs.twimg.com/profile_images/831539858434842627/MZj9UYmC_400x400.jpg" alt="">
+                <div>
+                  <span>Krystal Connolly</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/ErichManser">
                 <img src="https://pbs.twimg.com/profile_images/611535752199942144/kttwg7ql_400x400.jpg" alt="">
                 <div>
@@ -610,6 +620,35 @@
               </a>
             </li>
 
+            <li>
+              <a href="https://twitter.com/ackleyk">
+                <img src="https://pbs.twimg.com/profile_images/819224161306415104/AHa0lYxi_400x400.jpg" alt="">
+                <div>
+                  <span>Kevin D. Ackley</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/dugboticus">
+                <img src="https://pbs.twimg.com/profile_images/718748630576984064/xhTRzKK-_400x400.jpg" alt="">
+                <div>
+                  <span>Alistair Duggin</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/cklatik">
+                <img src="https://pbs.twimg.com/profile_images/702941207391940608/QUmQGG2__400x400.jpg" alt="">
+                <div>
+                  <span>Cory Klatik</span>
+                  <i>startingblind.com</i>
+                </div>
+              </a>
+            </li>
             <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
