--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -649,6 +649,67 @@
                 </div>
               </a>
             </li>
+
+            <li>
+              <a href="https://twitter.com/Loriaccess">
+                <img src="https://pbs.twimg.com/profile_images/591339415865286656/_xgn0jVJ_400x400.jpg" alt="">
+                <div>
+                  <span>Lori Southworth</span>
+                  <i>IBM</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/gianugo">
+                <img src="https://pbs.twimg.com/profile_images/776543237158731776/k4upyq3D_400x400.jpg" alt="">
+                <div>
+                  <span>Gianugo Rabellino</span>
+                  <i>Microsoft</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/joedolson">
+                <img src="https://pbs.twimg.com/profile_images/129572883/joe-dolson.jpg" alt="">
+                <div>
+                  <span>Joe Dolson</span>
+                  <i>joedolson.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/nschonni">
+                <img src="https://pbs.twimg.com/profile_images/2091550101/_7B65F87ACB-FA68-4806-B63D-0ED032D2D4F1_7D-alaska_20cruise0038_400x400.JPG" alt="">
+                <div>
+                  <span>Nick Schonning</span>
+                  <i>wet-boew.github.io</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/RavenAlly">
+                <img src="https://pbs.twimg.com/profile_images/819719669233819648/JehnDtRE_400x400.jpg" alt="">
+                <div>
+                  <span>Allison Ravenhall</span>
+                  <i>Intopia Digital</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/m/sarahtp">
+                <img src="https://pbs.twimg.com/profile_images/769387888/thumbnail_400x400.png" alt="">
+                <div>
+                  <span>Sarah Pulis</span>
+                  <i>Intopia Digital</i>
+                </div>
+              </a>
+            </li>
+
             <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
