More CSUN special attendees, info on food and drink.

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -77,10 +77,16 @@
         <div class="✨">
           <h2>Details</h2>
           <p>
-            <strong>So when is it?</strong> The evening of March 1st, 2017; after the first day of CSUN. 6pm to 11pm 👌🏾.<br>
+            <strong>So when is it?</strong> The evening of March 1st, 2017; the evening of the first day of CSUN. 6pm to 11pm 👌🏾.<br>
             <strong>Cool 🙌🏼 When does it end?</strong> When we're out of things to say.<br>
-            <strong>Where is it 🤔?</strong> <a href="http://missionbrewery.com/">Mission Brewery</a> 🍻<br>
+            <strong>Where is it 🤔?</strong> <a href="http://missionbrewery.com/">Mission Brewery, 1441 L Street</a> 🍻<br>
             <strong>Costs?</strong> There'll be a tip jar. Sponsors very welcome 👍🏿.
+            <p>
+              Drinks 🍻 will be provided up to a certain amount, after which you'll have to pay for your drink.
+            </p>
+            <p>
+              Catering 🌮 will be provided up to a certain amount. When we run out, folks can chip in and get more delivered. Possibilities are endless 🍕.
+            </p>
           </p>
 
           <p>
@@ -706,6 +712,26 @@
                 <div>
                   <span>Sarah Pulis</span>
                   <i>Intopia Digital</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/m/Skotkjerra">
+                <img src="https://pbs.twimg.com/profile_images/505835493947240448/vgWPBv0o.jpeg" alt="">
+                <div>
+                  <span>SteinErik Skotkjerra</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/m/skifte">
+                <img src="https://pbs.twimg.com/profile_images/732924573658800129/UqxRFKqc_400x400.jpg" alt="">
+                <div>
+                  <span>Anders Skifte</span>
+                  <i>skifte.com</i>
                 </div>
               </a>
             </li>
