Added speaker slot to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -145,6 +145,22 @@
               <p>Mind Your lang</p>
             </li>
 
+            <li>
+              <a href="https://twitter.com/Skotjerra">
+                <img src="https://pbs.twimg.com/profile_images/505835493947240448/vgWPBv0o.jpeg" alt="">
+                <div>
+                  <span>SteinErik Skotjerra</span>
+                </div>
+              </a>
+              <a href="https://twitter.com/skifte">
+                <img src="https://pbs.twimg.com/profile_images/732924573658800129/UqxRFKqc_400x400.jpg" alt="">
+                <div>
+                  <span>Anders Skifte</span>
+                </div>
+              </a>
+              <p>Feel the pain of a disability</p>
+            </li>
+
           </ul>
 
         </div>
