Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -77,7 +77,7 @@
         <div class="✨">
           <h2>Details</h2>
           <p>
-            <strong>So when is it?</strong> The evening of March 1st, 2017; the evening of the first day of CSUN. 6pm to 11pm 👌🏾.<br>
+            <strong>So when is it?</strong> The evening of March 1st, 2017; the evening of the first day of CSUN. 6pm to 11pm 👌🏾 There's no karaoke.<br>
             <strong>Cool 🙌🏼 When does it end?</strong> When we're out of things to say.<br>
             <strong>Where is it 🤔?</strong> <a href="http://missionbrewery.com/">Mission Brewery, 1441 L Street</a> 🍻<br>
             <strong>Costs?</strong> There'll be a tip jar. Sponsors very welcome 👍🏿.
@@ -152,7 +152,7 @@
                   <span>SteinErik Skotjerra</span>
                 </div>
               </a>
-              <a href="https://twitter.com/skifte">
+              <a href="https://twitter.com/Skifte">
                 <img src="https://pbs.twimg.com/profile_images/732924573658800129/UqxRFKqc_400x400.jpg" alt="">
                 <div>
                   <span>Anders Skifte</span>
@@ -723,7 +723,7 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/m/sarahtp">
+              <a href="https://twitter.com/sarahtp">
                 <img src="https://pbs.twimg.com/profile_images/769387888/thumbnail_400x400.png" alt="">
                 <div>
                   <span>Sarah Pulis</span>
@@ -733,7 +733,7 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/m/Skotkjerra">
+              <a href="https://twitter.com/Skotkjerra">
                 <img src="https://pbs.twimg.com/profile_images/505835493947240448/vgWPBv0o.jpeg" alt="">
                 <div>
                   <span>SteinErik Skotkjerra</span>
@@ -743,11 +743,51 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/m/skifte">
+              <a href="https://twitter.com/skifte">
                 <img src="https://pbs.twimg.com/profile_images/732924573658800129/UqxRFKqc_400x400.jpg" alt="">
                 <div>
                   <span>Anders Skifte</span>
                   <i>skifte.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/RadinaMatic">
+                <img src="https://pbs.twimg.com/profile_images/547407875337760770/YO4oaasl_400x400.jpeg" alt="">
+                <div>
+                  <span>Radina Matic</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/mak_en">
+                <img src="https://pbs.twimg.com/profile_images/2871200520/bdd29e89c55aaa21c445103806b83f2c_400x400.jpeg" alt="">
+                <div>
+                  <span>Makoto Ueki</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/birkir_gun">
+                <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_400x400.png" alt="">
+                <div>
+                  <span>Birkir Gunnarson</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/maiamoves">
+                <img src="https://pbs.twimg.com/profile_images/823744118991896576/xduc0rN5_400x400.jpg" alt="">
+                <div>
+                  <span>Maia Scott</span>
+                  <!-- <i></i> -->
                 </div>
               </a>
             </li>
