Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -793,6 +793,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/a11ycob">
+                <img src="https://pbs.twimg.com/profile_images/792062079326941189/hFCJvpSb_400x400.jpg" alt="">
+                <div>
+                  <span>Chris O&raquo;Brien (+2)</span>
+                  <i>AccessibleMedia</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
