--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -796,7 +796,7 @@
               <a href="https://twitter.com/a11ycob">
                 <img src="https://pbs.twimg.com/profile_images/792062079326941189/hFCJvpSb_400x400.jpg" alt="">
                 <div>
-                  <span>Chris O&raquo;Brien (+2)</span>
+                  <span>Chris O&apos;Brien (+2)</span>
                   <i>AccessibleMedia</i>
                 </div>
               </a>
