--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -142,7 +142,7 @@
                   <span>Adrian Roselli</span>
                 </div>
               </a>
-              <p>Mind Your lang</p>
+              <p>Mind Your Lang</p>
             </li>
 
             <li>
@@ -158,7 +158,17 @@
                   <span>Anders Skifte</span>
                 </div>
               </a>
-              <p>Feel the pain of a disability</p>
+              <p>Feel the Pain of a Disability</p>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/jspellmann">
+                <img src="https://pbs.twimg.com/profile_images/807001251779084288/nLSJEjSv_400x400.jpg" alt="">
+                <div>
+                  <span>Jeanne Spellman</span>
+                </div>
+              </a>
+              <p>What's New in WCAG?</p>
             </li>
 
           </ul>
@@ -284,7 +294,7 @@
 
             <li>
               <a href="https://twitter.com/stommepoes">
-                <img src="https://pbs.twimg.com/profile_images/826763266802192385/fYPCYBQH_400x400.jpg" alt="">
+                <img src="https://pbs.twimg.com/profile_images/833447560249475074/h6EpeuHm_400x400.jpg" alt="">
                 <div>
                   <span>Mallory</span>
                   <i>Pearson</i>
@@ -801,6 +811,27 @@
                 </div>
               </a>
             </li>
+
+            <li>
+              <a href="https://twitter.com/jspellman">
+                <img src="https://pbs.twimg.com/profile_images/807001251779084288/nLSJEjSv_400x400.jpg" alt="">
+                <div>
+                  <span>Jeanne Spellman</span>
+                  <i>The Paciello Group</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <div>
+                <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_400x400.png" alt="">
+                <div>
+                  <span>Jon R. Gunderson</span>
+                  <i>Illinois University</i>
+                </div>
+              </div>
+            </li>
+
 
             <li>
               <a href="https://twitter.com/detonite">
