Added CSUN special speaker details & attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -112,7 +112,7 @@
                   <span>The Viking and the Lumberjack</span>
                 </div>
               </a>
-              <p>Title to be announced.</p>
+              <p>The Unofficial, Unsanctioned, and (probably) Unnecessary, CSUN Un-Keynote</p>
             </li>
 
             <li>
@@ -832,6 +832,35 @@
               </div>
             </li>
 
+            <li>
+              <a href="https://twitter.com/PatrickDunphy">
+                <img src="https://pbs.twimg.com/profile_images/463700698052308993/1l8kUct2_400x400.png" alt="">
+                <div>
+                  <span>Patrick Dunphy</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/calebhunt">
+                <img src="https://pbs.twimg.com/profile_images/831590402327269376/u40jGzZw_400x400.jpg" alt="">
+                <div>
+                  <span>Caleb Hunt</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/Michele2323">
+                <img src="https://pbs.twimg.com/profile_images/3329138485/1088b9a923eaa5c8f4f06624114d4821_400x400.jpeg" alt="">
+                <div>
+                  <span>Michele Christian</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
 
             <li>
               <a href="https://twitter.com/detonite">
