Added CSUN special attendees and sponsor

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -863,6 +863,46 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/mickell">
+                <img src="https://pbs.twimg.com/profile_images/747476520264937473/2sgcvBko_400x400.jpg" alt="">
+                <div>
+                  <span>Mike Kelly</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/good_wally">
+                <img src="https://pbs.twimg.com/profile_images/714967836737814528/uxBzTYW9_400x400.jpg" alt="">
+                <div>
+                  <span>George Zamfir</span>
+                  <i>Slack</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/SeemanLisa">
+                <img src="https://pbs.twimg.com/profile_images/378800000184998565/f65c250d3749575cc9c1a9088761ff3e_400x400.gif" alt="">
+                <div>
+                  <span>Lisa Seeman</span>
+                  <i>IBM</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/tomi91">
+                <img src="https://pbs.twimg.com/profile_images/494682567149248512/x056Q1PF_400x400.jpeg" alt="">
+                <div>
+                  <span>Tomi G</span>
+                  <i>coolblindtech.com/author/tomi-geczy</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
@@ -908,6 +948,13 @@
                 <img src="/images/sponsors/tpg.png" alt="The Paciello Group">
               </a>
               <p>The Paciello Group</p>
+            </li>
+
+            <li>
+              <a href="http://www.ami.ca/">
+                <img src="/images/sponsors/ami.png" alt="Accesible Media Inc.">
+              </a>
+              <p>Accessible Media Inc.</p>
             </li>
 
           </ul>
