Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -903,6 +903,26 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/iheni">
+                <img src="https://pbs.twimg.com/profile_images/441344212748214272/B6TMRWWI_400x400.jpeg" alt="">
+                <div>
+                  <span>Henny Swan</span>
+                  <i>The Paciello Group</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/ScreenOrigami">
+                <img src="https://pbs.twimg.com/profile_images/741204150097203200/xRmEESMa_400x400.jpg" alt="">
+                <div>
+                  <span>Sandra Kallmeyer</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
