Added speakers, sponsor to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -923,6 +923,56 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/sheknowsdesign">
+                <img src="https://pbs.twimg.com/profile_images/422021780119633920/zTCVMCp9_400x400.png" alt="">
+                <div>
+                  <span>Stacey Rayos</span>
+                  <i>staceyrayos.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/accessibilit">
+                <img src="https://pbs.twimg.com/profile_images/830074313739010048/ZhRmg2gQ_400x400.jpg" alt="">
+                <div>
+                  <span>Accessibil-IT</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/AccessForAll">
+                <img src="https://pbs.twimg.com/profile_images/421250089/ange_april2009_small_400x400.jpg" alt="">
+                <div>
+                  <span>Angela Hooker</span>
+                  <i>angelahooker.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/Accessible_Info">
+                <img src="https://pbs.twimg.com/profile_images/504921897/Laura_Photo_400x400.jpg" alt="">
+                <div>
+                  <span>Laura Legendary</span>
+                  <i>Accessible_Info</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/codeability">
+                <img src="https://pbs.twimg.com/profile_images/756992113238155264/2TsSaztX_400x400.jpg" alt="">
+                <div>
+                  <span>Elias Mason</span>
+                  <i>ejmason.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
@@ -975,6 +1025,13 @@
                 <img src="/images/sponsors/ami.png" alt="Accesible Media Inc.">
               </a>
               <p>Accessible Media Inc.</p>
+            </li>
+
+            <li>
+              <a href="http://www.accessibilit.com">
+                <img src="/images/sponsors/accessibil-it.png" alt="Accessibil-IT">
+              </a>
+              <p>Accessibil-IT</p>
             </li>
 
           </ul>
