Fix Laura Legendary info

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -957,7 +957,7 @@
                 <img src="https://pbs.twimg.com/profile_images/504921897/Laura_Photo_400x400.jpg" alt="">
                 <div>
                   <span>Laura Legendary</span>
-                  <i>Accessible_Info</i>
+                  <i>accessibleinsights.info</i>
                 </div>
               </a>
             </li>
