Added talk slot to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -171,6 +171,17 @@
               <p>What's New in WCAG?</p>
             </li>
 
+            <li>
+              <a href="https://twitter.com/codeability">
+                <img src="https://pbs.twimg.com/profile_images/756992113238155264/2TsSaztX_400x400.jpg" alt="">
+                <div>
+                  <span>Elias Mason</span>
+                  <i>ejmason.com</i>
+                </div>
+              </a>
+              <p>Ableism and a11y</p>
+            </li>
+
           </ul>
 
         </div>
