Added speakers & attendees to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -182,6 +182,17 @@
               <p>Ableism and a11y</p>
             </li>
 
+            <li>
+              <a href="https://twitter.com/dugboticus">
+                <img src="https://pbs.twimg.com/profile_images/718748630576984064/xhTRzKK-_400x400.jpg" alt="">
+                <div>
+                  <span>Alistair Duggin</span>
+                  <i>GOV.UK</i>
+                </div>
+              </a>
+              <p>Testing Testing Tools</p>
+            </li>
+
           </ul>
 
         </div>
@@ -979,6 +990,66 @@
                 <div>
                   <span>Elias Mason</span>
                   <i>ejmason.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/ShafPatel">
+                <img src="https://pbs.twimg.com/profile_images/792185250260582400/ADLP2hrm_400x400.jpg" alt="">
+                <div>
+                  <span>Shaf Patel</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/JamieKnight">
+                <img src="https://pbs.twimg.com/profile_images/692623622926635008/h1A1r_HW_400x400.jpg" alt="">
+                <div>
+                  <span>Jamie Knight (+🦁)</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/mholzschlag">
+                <img src="https://pbs.twimg.com/profile_images/835636475907624964/Xf5zLRsm_400x400.jpg" alt="">
+                <div>
+                  <span>Molly Holszschlag</span>
+                  <i>molly.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/MisterWookie">
+                <img src="https://pbs.twimg.com/profile_images/526849958729621504/YTQoOae6_400x400.jpeg" alt="">
+                <div>
+                  <span>Michael Southgate</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://www.linkedin.com/in/shannon-mulhall-05079765">
+                <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/6/005/06a/311/049ca4d.jpg" alt="">
+                <div>
+                  <span>Shannon Mulhall</span>
+                  <i>US Government</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/KevinChao">
+                <img src="https://pbs.twimg.com/profile_images/524791704025460736/8Ls7EOcK_400x400.jpeg" alt="">
+                <div>
+                  <span>Kevin Chao</span>
+                  <i>Google</i>
                 </div>
               </a>
             </li>
