--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -1055,6 +1055,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/tbabinszki">
+                <img src="https://pbs.twimg.com/profile_images/844261505/Tom-Babinszki_400x400.jpg" alt="">
+                <div>
+                  <span>Tom Babinszki</span>
+                  <i>IBM</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
