Added attendees to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -1009,7 +1009,7 @@
                 <img src="https://pbs.twimg.com/profile_images/692623622926635008/h1A1r_HW_400x400.jpg" alt="">
                 <div>
                   <span>Jamie Knight (+🦁)</span>
-                  <!-- <i></i> -->
+                  <i>BBC</i>
                 </div>
               </a>
             </li>
@@ -1060,6 +1060,26 @@
                 <div>
                   <span>Tom Babinszki</span>
                   <i>IBM</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/AidanA11y">
+                <img src="https://pbs.twimg.com/profile_images/603029185452314626/SOCq4lkv_400x400.jpg" alt="">
+                <div>
+                  <span>Aidan Tierney</span>
+                  <i>a11yTO</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/Jennison">
+                <img src="https://pbs.twimg.com/profile_images/578005483501400065/HFEM47Jj_400x400.jpeg" alt="">
+                <div>
+                  <span>Jennison Asuncion</span>
+                  <i>jennison.ca</i>
                 </div>
               </a>
             </li>
