Update Kevin Chao details

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -1045,11 +1045,11 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/KevinChao">
-                <img src="https://pbs.twimg.com/profile_images/524791704025460736/8Ls7EOcK_400x400.jpeg" alt="">
+              <a href="#unknown">
+                <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_400x400.png" alt="">
                 <div>
                   <span>Kevin Chao</span>
-                  <i>Google</i>
+                  <!-- <i></i> -->
                 </div>
               </a>
             </li>
