Added attendees to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -1045,13 +1045,13 @@
             </li>
 
             <li>
-              <a href="#unknown">
+              <div>
                 <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_400x400.png" alt="">
                 <div>
                   <span>Kevin Chao</span>
                   <!-- <i></i> -->
                 </div>
-              </a>
+              </div>
             </li>
 
             <li>
@@ -1080,6 +1080,26 @@
                 <div>
                   <span>Jennison Asuncion</span>
                   <i>jennison.ca</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/bahlippy">
+                <img src="https://pbs.twimg.com/profile_images/733259534173667328/vBM5nosr_400x400.jpg" alt="">
+                <div>
+                  <span>Tiffany Lippy</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/utt73">
+                <img src="https://pbs.twimg.com/profile_images/757373553834590208/ASaxwUut_400x400.jpg" alt="">
+                <div>
+                  <span>John Utter</span>
+                  <i>johnutter.org</i>
                 </div>
               </a>
             </li>
