Added attendees to CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -175,7 +175,7 @@
               <a href="https://twitter.com/codeability">
                 <img src="https://pbs.twimg.com/profile_images/756992113238155264/2TsSaztX_400x400.jpg" alt="">
                 <div>
-                  <span>Elias Mason</span>
+                  <span>Elias Mason (+2)</span>
                   <i>ejmason.com</i>
                 </div>
               </a>
@@ -1100,6 +1100,86 @@
                 <div>
                   <span>John Utter</span>
                   <i>johnutter.org</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/wyattdanger">
+                <img src="https://pbs.twimg.com/profile_images/767955904553594880/xZ8_xojh_400x400.jpg" alt="">
+                <div>
+                  <span>Stephen Wyatt Bush</span>
+                  <i>AirBnB</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/backwardok">
+                <img src="https://pbs.twimg.com/profile_images/836367060380889088/qebRCc38_400x400.jpg" alt="">
+                <div>
+                  <span>Diane Ko</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/soundslikesue">
+                <img src="https://pbs.twimg.com/profile_images/691727056619503616/k85efxdj_400x400.jpg" alt="">
+                <div>
+                  <span>Michael Austin Sui</span>
+                  <i>AirBnB, Google</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/rebeccananca">
+                <img src="https://pbs.twimg.com/profile_images/616576369217118208/D-bKOPIP_400x400.jpg" alt="">
+                <div>
+                  <span>Rebecca Nancarrow</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/scarynige">
+                <img src="https://pbs.twimg.com/profile_images/477149822634717184/BAonlpue_400x400.jpeg" alt="">
+                <div>
+                  <span>Nigel Megitt</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/suzanneclarke">
+                <img src="https://pbs.twimg.com/profile_images/773130380551553024/wJNzURks_400x400.jpg" alt="">
+                <div>
+                  <span>Suzanne Clarke</span>
+                  <i>BBC</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/S67Sean">
+                <img src="https://pbs.twimg.com/profile_images/606212629904900097/OTMdWF2E_400x400.jpg" alt="">
+                <div>
+                  <span>Sean Gilroy</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/L1L_Hulk">
+                <img src="https://pbs.twimg.com/profile_images/775634097528008704/VTZRQG5G_400x400.jpg" alt="">
+                <div>
+                  <span>Leena Haque</span>
+                  <!-- <i></i> -->
                 </div>
               </a>
             </li>
