Added details for CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -40,6 +40,7 @@
     </header>
 
     <div class="ℹ️">
+      <p>We're full!</p>
       <p>We are still filling in some details for this event; <a href="https://twitter.com/roledrinks">we post updates on Twitter</a>.</p>
     </div>
 
@@ -78,6 +79,8 @@
           <h2>Details</h2>
           <p>
             <strong>So when is it?</strong> The evening of March 1st, 2017; the evening of the first day of CSUN. 6pm to 11pm 👌🏾 There's no karaoke.<br>
+            <strong>Make sure to bring your CSUNATC conference badge!</strong>
+            <br>
             <strong>Cool 🙌🏼 When does it end?</strong> When we're out of things to say.<br>
             <strong>Where is it 🤔?</strong> <a href="http://missionbrewery.com/">Mission Brewery, 1441 L Street</a> 🍻<br>
             <strong>Costs?</strong> There'll be a tip jar. Sponsors very welcome 👍🏿.
@@ -1182,6 +1185,16 @@
                   <!-- <i></i> -->
                 </div>
               </a>
+            </li>
+
+            <li>
+              <div>
+                <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_400x400.png" alt="">
+                <div>
+                  <span>Travis Snyder</span>
+                  <!-- <i></i> -->
+                </div>
+              </div>
             </li>
 
             <li>
