Added details for CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="ℹ️">
-      <p>We're full!</p>
+      <h2>We're full!</h2>
       <p>We are still filling in some details for this event; <a href="https://twitter.com/roledrinks">we post updates on Twitter</a>.</p>
     </div>
 
