--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -1198,6 +1198,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/handcoding">
+                <img src="https://pbs.twimg.com/profile_images/534754363374202880/VLOlErV1_400x400.jpeg" alt="">
+                <div>
+                  <span>Ashley Bischoff</span>
+                  <i>The Paciello Group</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
