Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -41,7 +41,7 @@
 
     <div class="ℹ️">
       <h2>We're full!</h2>
-      <p>We are still filling in some details for this event; <a href="https://twitter.com/roledrinks">we post updates on Twitter</a>.</p>
+      <p>This meetup has exceeded the expected amount of attendees (awesome!). Food and drinks are sponsored to a <strong>limited</strong> capacity. Please read the details further down the page!</p>
     </div>
 
     <nav aria-label="Page">
@@ -88,7 +88,7 @@
               Drinks 🍻 will be provided up to a certain amount, after which you'll have to pay for your drink.
             </p>
             <p>
-              Catering 🌮 will be provided up to a certain amount. When we run out, folks can chip in and get more delivered. Possibilities are endless 🍕.
+              Catering 🌮 will be provided up to around 60 peope. When we run out, folks can chip in and get more delivered. Possibilities are endless 🍕.
             </p>
           </p>
 
