Added CSUN special details

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -1269,6 +1269,13 @@
               <p>Accessibil-IT</p>
             </li>
 
+            <li>
+              <a href="http://globalaccessibilityawarenessday.org/">
+                <img src="https://pbs.twimg.com/profile_images/3623966965/e7255055aaab07e6a9aacce08f4beb4c_400x400.png" alt="Global Accessibility Awareness Day">
+              </a>
+              <p>Global Accessibility Awareness Day</p>
+            </li>
+
           </ul>
           <hr>
           <p>Want to sponsor? <a href="mailto:job@roledrinks.com">We'd love to hear it!</a></p>
