Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -278,10 +278,10 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/starla175">
-                <img src="https://pbs.twimg.com/profile_images/756327367627317248/Ug2S4q01_400x400.jpg" alt="">
+              <a href="https://twitter.com/cordeliadillon">
+                <img src="https://pbs.twimg.com/profile_images/787394297213562880/goTyhMov_400x400.jpg" alt="">
                 <div>
-                  <span>Beth Raduenzel</span>
+                  <span>Cordelia</span>
                   <!-- <i></i> -->
                 </div>
               </a>
