Added CSUN special details

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -41,6 +41,7 @@
 
     <div class="ℹ️">
       <h2>We're full!</h2>
+      <p>Bring your conference or exhibit badge when attending!</p>
       <p>This meetup has exceeded the expected amount of attendees (awesome!). Food and drinks are sponsored to a <strong>limited</strong> capacity. Please read the details further down the page!</p>
     </div>
 
