Added CSUN special details

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -45,6 +45,15 @@
       <p>This meetup has exceeded the expected amount of attendees (awesome!). Food and drinks are sponsored to a <strong>limited</strong> capacity. Please read the details further down the page!</p>
     </div>
 
+    <div class="ℹ️">
+      <h2>Schedule</h2>
+      <ul>
+        <li>18:00 - opening with food and drinks</li>
+        <li>19:00 to 21:00 - keynote and speakers</li>
+        <li>21:00 to 23:00 - drinks &amp; social</li>
+      </ul>
+    </div>
+
     <nav aria-label="Page">
       <ul>
         <li>
@@ -89,7 +98,7 @@
               Drinks 🍻 will be provided up to a certain amount, after which you'll have to pay for your drink.
             </p>
             <p>
-              Catering 🌮 will be provided up to around 60 peope. When we run out, folks can chip in and get more delivered. Possibilities are endless 🍕.
+              We've got catering 🌮 for about 100 people. When we run out, folks can chip in and get more delivered. Possibilities are endless 🍕.
             </p>
           </p>
 
