Added CSUN special details

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -188,7 +188,7 @@
               <a href="https://twitter.com/codeability">
                 <img src="https://pbs.twimg.com/profile_images/756992113238155264/2TsSaztX_400x400.jpg" alt="">
                 <div>
-                  <span>Elias Mason (+2)</span>
+                  <span>Elias Mason</span>
                   <i>ejmason.com</i>
                 </div>
               </a>
