--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -88,12 +88,12 @@
         <div class="✨">
           <h2>Details</h2>
           <p>
-            <strong>Make sure to bring your CSUNATC conference badge!</strong>
+            <strong>Make sure to bring your CSUNATC conference or exhibit badge!</strong>
             <br>
             <strong>So when is it?</strong> The evening of March 1st, 2017; the evening of the first day of CSUN. 6pm to 11pm 👌🏾 There's no karaoke.<br>
             <strong>Cool 🙌🏼 When does it end?</strong> When we're out of things to say.<br>
             <strong>Where is it 🤔?</strong> <a href="http://missionbrewery.com/">Mission Brewery, 1441 L Street</a> 🍻<br>
-            <strong>Costs?</strong> There'll be a tip jar. Sponsors very welcome 👍🏿.
+            <strong>Costs?</strong>None. Sponsors very welcome 👍🏿.
             <p>
               Drinks 🍻 will be provided up to a certain amount, after which you'll have to pay for your drink.
             </p>
