Add Twitter card for San Diego

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -6,13 +6,13 @@
     <title>Accessibility Meetup: role=drinks</title>
     <link rel="stylesheet" href="/drinks.css">
 
-    <!-- <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@roledrinks">
     <meta name="twitter:creator" content="@roledrinks">
-    <meta name="twitter:title" content="role=drinks in November 12th">
+    <meta name="twitter:title" content="role=drinks in San Diego March 1st">
     <meta name="twitter:description" content="What on Earth is a role=drinks? It’s an accessibility meet-up with lightning talks and more than enough time to grab a drink.">
-    <meta name="twitter:image" content="http://roledrinks.uk/images/twitter-card.png">
-    <meta name="twitter:image:alt" content="role=drinks, Amsterdam, November 12th 🍻"> -->
+    <meta name="twitter:image" content="http://roledrinks.com/images/twitter/2017-03-01-san_diego.png">
+    <meta name="twitter:image:alt" content="role=drinks, San Diego, March 1st 🍻">
   </head>
   <body>
     <a href="#main">Skip to content</a>
