Add Dirk Ginader

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -361,6 +361,18 @@
               </a>
             </li>
 
+
+
+            <li>
+              <a href="https://twitter.com/ginader">
+                <img src="https://pbs.twimg.com/profile_images/2932456336/b5d4615735aa0bef8c6128697c2d3ce9_400x400.png" alt="">
+                <div>
+                  <span>Dirk Ginader</span>
+                  <i>Google</i>
+                </div>
+              </a>
+            </li>
+
             <!-- ## E ## -->
             <li>
               <a href="https://twitter.com/eeleesuh ">
