Added CSUN special sponsor

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -1315,6 +1315,13 @@
               <p>Global Accessibility Awareness Day</p>
             </li>
 
+            <li>
+              <a href="http://www.tink.uk/">
+                <img src="https://pbs.twimg.com/profile_images/1701895352/tink-twitter-avatar_400x400.png" alt="Tink">
+              </a>
+              <p>Tink</p>
+            </li>
+
           </ul>
           <hr>
           <p>Want to sponsor? <a href="mailto:job@roledrinks.com">We'd love to hear it!</a></p>
