Change Krijn company

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -147,6 +147,7 @@
                 <img src="/images/attendees/Krijn.png" alt="">
                 <div>
                   <span>Krijn Hoetmer</span>
+                  <i>Qontent</i>
                 </div>
               </a>
             </li>
