--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@roledrinks">
     <meta name="twitter:creator" content="@roledrinks">
-    <meta name="twitter:title" content="role=drinks in November 12th">
+    <meta name="twitter:title" content="role=drinks, June 17th, Amsterdam">
     <meta name="twitter:description" content="What on Earth is a role=drinks? It’s an accessibility meet-up with lightning talks and more than enough time to grab a drink.">
-    <meta name="twitter:image" content="http://roledrinks.com/images/twitter-card.png">
-    <meta name="twitter:image:alt" content="role=drinks accessibility meetup 🍻">
+    <meta name="twitter:image" content="http://roledrinks.com/images/twitter/-2017-06-17-amsterdam.jpg">
+    <meta name="twitter:image:alt" content="role=drinks, Amsterdam, June 17th 🍻">
   </head>
   <body>
     <a href="#main">Skip to content</a>
